Updated CSS fix the text align on ul lists

--- a/30_Build_an_Event_Flyer_Page/styles.css
+++ b/30_Build_an_Event_Flyer_Page/styles.css
@@ -22,7 +22,7 @@ section {
     width: 30%;
 }
 ul {
-    text-align: left;
+    text-align: center;
     list-style: inside;
     padding-left: 10px;
 }
